# lifx-night-light

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  app.py  cli.py  config.json  cron.yml  daemon.py  requirements.txt  run.py  scenes.yml  setup.cfg  sleep.yml  wake.yml
conf/: cron.yml  device.yml
lifx_night_light/: app.py  cli.py  daemon.py  runner.py
lifx_night_light/static/: main.js
lifx_night_light/templates/: index.html
lights/: runner.py
static/: style.css
templates/: index.html
web/: app.py
web/static/: main.js  style.css
web/templates/: index.html
