[metadata]
name = lifx-night-light
license = MIT
description = Simple light transitions for LIFX
author = Chris Arderne

[options]
packages = lifx_night_light
python_requires = >= 3.9
install_requires =
    Flask
    lifxlan
    matplotlib
    numpy
    python-crontab
    PyYAML
    scipy
    typer
    types-PyYAML

[options.entry_points]
console_scripts =
    lifx-cli = lifx_night_light.cli:cli
    lifx-daemon = lifx_night_light.daemon:wait

[tox:tox]
envlist = py39
skipsdist = true

[testenv]
install_command = pip install {opts} {packages}
basepython = python3.9
setenv =
  PYTHONPATH=.
deps =
    .
    mypy
commands =
    pytest
    mypy --install-types --non-interactive

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = .git,.hg,.mypy_cache,.tox,.venv,_build,buck-out,build,dist

[flake8]
max-line-length = 88
exclude = .tox,.eggs,ci/templates,build,dist, __init__.py
ignore=E741,F403,E265,W504,E226,W503,E501,E203

[tool:pytest]
norecursedirs =
    migrations

python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -ra
    --strict-markers
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short
testpaths =
    tests.py

[tool:isort]
profile=black
skip = .tox,.eggs,ci/templates,build,dist

[mypy]
ignore_missing_imports = True
pretty = True
show_error_codes = True
show_error_context = True
show_traceback = True
